# TrayRacer

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.ps1  run.ps1  setup.ps1  vcpkg.json
examples/optix7_01/: CMakeLists.txt  main.cpp
examples/optix7_02/: CMakeLists.txt  SampleRenderer.cpp  SampleRenderer.h  launch_params.h  main.cpp
examples/raylib_output/: CMakeLists.txt  LaunchParams.h  SampleRenderer.cpp  SampleRenderer.h  devicePrograms.cu  main.cpp
utils/: CMakeLists.txt  device_buffer.h  logging.cpp  logging.h  optix_lib.h  utils.cpp
